--- a/package.json
+++ b/package.json
@@ -12,17 +12,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/passport-github": "^1.1.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "moment": "^2.29.4",
-    "mongoose": "^6.5.4"
+    "mongoose": "^6.5.4",
+    "passport": "^0.6.0",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.5",
     "@types/node": "^18.7.14",
+    "@types/passport-google-oauth20": "^2.0.11",
     "concurrently": "^7.3.0",
+    "i": "^0.3.7",
     "nodemon": "^2.0.19",
+    "npm": "^8.19.1",
     "typescript": "^4.8.2"
   }
 }
