--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node build/dist/index.js",
+    "heroku-prebuild": "npm i",
     "build": "tsc -p .",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q build/dist/index.js\" \"nodemon src/index.ts\" "
   },
@@ -12,8 +13,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/passport-github": "^1.1.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
@@ -28,14 +27,17 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
     "@types/node": "^18.7.14",
+    "@types/passport-github": "^1.1.7",
     "@types/passport-google-oauth20": "^2.0.11",
     "concurrently": "^7.3.0",
     "i": "^0.3.7",
     "nodemon": "^2.0.19",
     "npm": "^8.19.1",
+    "tsc": "^2.0.4",
     "typescript": "^4.8.2"
   }
 }
