--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "passport": "^0.6.0",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local-mongoose": "^7.1.2"
+    "passport-local-mongoose": "^7.1.2",
+    "tsc": "^2.0.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -37,7 +38,6 @@
     "i": "^0.3.7",
     "nodemon": "^2.0.19",
     "npm": "^8.19.1",
-    "tsc": "^2.0.4",
     "typescript": "^4.8.2"
   }
 }
