--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "passport": "^0.6.0",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local-mongoose": "^7.1.2",
-    "tsc": "^2.0.4"
+    "passport-local-mongoose": "^7.1.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
